Fix of MDEV-565: Server crashes in ha_cassandra::write_row on inserting NULL into a dynamic column

Fixed incorrect initialization of variable which caused freeing memory by random address in case of error.